# open-sesame

./: .env.example  .envrc  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .mise.toml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  VERSIONING.md  commitlint.config.cjs  config.example.toml  flake.nix  gpg.key  lefthook.yml  lychee.toml  release.config.mjs  rust-toolchain.toml  taplo.toml
.cargo/: config.toml
.config/: hakari.toml
.github/templates/: RELEASE_BODY.md  RELEASE_HEADER.md  index.html
.github/workflows/: ci.yml  docs.yml  nix.yml  release.yml  semantic-release.yml  test.yml
cli-pds/: Cargo.toml
cli-pds/src/: main.rs
contrib/systemd/: open-sesame-clipboard.service  open-sesame-input.service  open-sesame-launcher.service  open-sesame-network.service  open-sesame-profile.service  open-sesame-secrets.service  open-sesame-snippets.service  open-sesame-wm.service
core-auth/: Cargo.toml
core-auth/src/: backend.rs  dispatcher.rs  lib.rs  password.rs  ssh.rs  ssh_types.rs
core-config/: Cargo.toml
core-config/src/: lib.rs  loader.rs  loader_installation.rs  loader_workspace.rs  schema.rs  schema_agents.rs  schema_crypto.rs  schema_installation.rs  schema_network.rs  schema_peripheral.rs  schema_secrets.rs  schema_vault_sync.rs  schema_wm.rs  schema_workspace.rs  validation.rs  watcher.rs
core-crypto/: Cargo.toml
core-crypto/src/: encryption.rs  hkdf.rs  kdf.rs  lib.rs  network.rs  secure_bytes.rs  secure_vec.rs
core-crypto/tests/: replication_envelope.rs
core-fuzzy/: Cargo.toml
core-fuzzy/benches/: fuzzy_bench.rs
core-fuzzy/src/: frecency.rs  lib.rs  search.rs
core-ipc/: Cargo.toml
core-ipc/src/: client.rs  framing.rs  lib.rs  message.rs  noise.rs  registry.rs  server.rs  transport.rs
core-ipc/tests/: daemon_keypair.rs  socket_integration.rs
core-memory/: Cargo.toml
core-memory/src/: alloc.rs  lib.rs
core-memory/tests/: guard_page_sigsegv.rs
core-profile/: Cargo.toml
core-profile/src/: audit.rs  context.rs  lib.rs
core-secrets/: Cargo.toml
core-secrets/src/: lib.rs  sqlcipher.rs
core-types/: Cargo.toml
core-types/src/: constants.rs  crypto.rs  events.rs  ids.rs  lib.rs  network.rs  security.rs  sensitive.rs
daemon-clipboard/: Cargo.toml
daemon-clipboard/src/: main.rs
daemon-discovery/: Cargo.toml
daemon-discovery/src/: bootstrap.rs  dns_srv.rs  lib.rs  manager.rs  queue.rs
daemon-discovery/src/bep44/: mod.rs  publish.rs  resolve.rs  schema.rs
daemon-discovery/src/gossip/: mod.rs  runtime.rs  swim.rs
daemon-discovery/src/mdns/: announce.rs  listen.rs  mod.rs  packet.rs  socket.rs
daemon-input/: Cargo.toml
daemon-input/src/: keyboard.rs  main.rs
daemon-launcher/: Cargo.toml
daemon-launcher/src/: launch.rs  main.rs  scanner.rs
daemon-network/: Cargo.toml
daemon-network/src/: audit.rs  config.rs  handshake.rs  handshake_ack.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  sandbox.rs  send.rs  state.rs
daemon-network/src/control/: bus.rs  mod.rs
daemon-network/src/dispatch/: discovery.rs  ipc.rs  mod.rs  tcp.rs  udp.rs
daemon-network/src/flood/: cookie.rs  mod.rs  pow.rs
daemon-network/src/noise/: state.rs
daemon-network/src/ratelimit/: bucket.rs
daemon-network/src/session/: mod.rs  replay.rs  state.rs  table.rs
daemon-network/src/tofu/: fingerprint.rs  store.rs
daemon-network/src/transport/: frame.rs  mod.rs  tcp.rs  udp.rs
daemon-network/tests/integration/: discovery.rs  e2e_two_process.rs  flood.rs  lifecycle.rs  noise_vectors.rs  two_peer.rs
daemon-network/tests/integration/common/: mod.rs  test_daemon.rs
daemon-profile/: Cargo.toml
daemon-profile/src/: activation.rs  dispatch.rs  key_rotation.rs  main.rs  sandbox.rs
daemon-secrets/: Cargo.toml
daemon-secrets/src/: acl.rs  crud.rs  dispatch.rs  key_locker_linux.rs  keyring.rs  lib.rs  main.rs  network_identity.rs  rate_limit.rs  sandbox.rs  unlock.rs  vault.rs  vault_log.rs
daemon-secrets/tests/: replication_pipeline.rs
daemon-snippets/: Cargo.toml
daemon-snippets/src/: main.rs
daemon-wm/: Cargo.toml
daemon-wm/src/: commands.rs  commands_unlock.rs  controller.rs  hints.rs  lib.rs  main.rs  mru.rs  overlay.rs  render.rs  sandbox.rs  state.rs
daemon-wm/src/render/: layout.rs  mod.rs  primitives.rs  text.rs
daemon-wm/src/surface/: mod.rs
daemon-wm/src/surface/wayland/: app.rs  blur.rs  commands.rs  compositor.rs  event_loop.rs  keyboard.rs  mod.rs  poll.rs  render_frame.rs
daemon-wm/tests/: wm_integration.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/theme/: custom.css
extension-host/: Cargo.toml
extension-host/src/: lib.rs
extension-sdk/: Cargo.toml
extension-sdk/src/: lib.rs
nix/: package-desktop.nix  package-headless.nix  package.nix
open-sesame/: Cargo.toml
open-sesame/src/: audit.rs  cli.rs  clipboard.rs  env.rs  helpers.rs  init.rs  input.rs  ipc.rs  launch.rs  main.rs  network.rs  profile.rs  secrets.rs  snippets.rs  ssh.rs  status.rs  unlock.rs  wm.rs  workspace.rs
open-sesame/tests/: cli_integration.rs
platform-linux/: Cargo.toml
platform-linux/src/: backend_cosmic.rs  backend_wlr.rs  clipboard.rs  compositor.rs  cosmic_keys.rs  cosmic_theme.rs  dbus.rs  focus_monitor.rs  input.rs  lib.rs  sandbox.rs  security.rs  systemd.rs
platform-macos/: Cargo.toml
platform-macos/src/: accessibility.rs  clipboard.rs  input.rs  keychain.rs  launch_agent.rs  lib.rs  tcc.rs
platform-windows/: Cargo.toml
platform-windows/src/: clipboard.rs  credential.rs  hotkey.rs  input_hook.rs  lib.rs  named_pipe.rs  policy.rs  task_scheduler.rs  ui_automation.rs  virtual_desktop.rs
scripts/: postinst
sesame-workspace/: Cargo.toml
sesame-workspace/src/: config.rs  convention.rs  git.rs  lib.rs
sesame-workspace/src/forge/: github.rs  mod.rs
sesame-workspace/src/git/: clone.rs  inspect.rs  mod.rs  remote.rs  workspace.rs
sesame-workspace/src/platform/: linux.rs
src/: README.md  lib.rs  main.rs
tests/: integration_mru.rs
tests.v1/: integration_logging.rs
workspace-hack/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+125 files in other folders)
