[package]
name = "cli-pds"
description = "Primary CLI for the Programmable Desktop Suite: daemon management, config, profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-profile = { workspace = true }
core-secrets = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
clap_complete = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
comfy-table  = { workspace = true }
dialoguer    = { workspace = true }
indicatif    = { workspace = true }
owo-colors   = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }

[dev-dependencies]
assert_cmd   = { workspace = true }
predicates   = { workspace = true }
tempfile     = { workspace = true }
