[package]
name = "core-crypto"
description = "Cryptographic primitives: AES-256-GCM, Argon2id, SecureBytes, EncryptedStore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# All memory protection is delegated to core-memory. No direct unsafe in this crate.

[features]
default = ["fips-crypto"]
# Production: aws-lc-rs (FIPS 140-3 #4816). Requires cmake C build (~3 min cold).
fips-crypto = ["dep:aws-lc-rs"]
# Development: ring (pure Rust, builds in seconds, non-FIPS).
# Use for fast dev iteration: cargo build --no-default-features --features=fast-dev
fast-dev = ["dep:ring"]

[dependencies]
core-memory = { workspace = true }
core-types  = { workspace = true }
aes-gcm     = { workspace = true }
argon2      = { workspace = true }
zeroize     = { workspace = true }
blake3      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
pbkdf2      = { workspace = true }
sha2        = { workspace = true }
hmac        = { workspace = true }
hkdf        = { workspace = true }
aws-lc-rs   = { workspace = true, optional = true }
ring        = { workspace = true, optional = true }
blake2      = { workspace = true }
uuid        = { workspace = true }
x25519-dalek = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
proptest    = { workspace = true }
tempfile    = { workspace = true }
serde_json  = { workspace = true }
base64      = { workspace = true }
hex         = { workspace = true }
blake3      = { workspace = true }
