[package]
name = "core-memory"
description = "Page-aligned secure memory allocator for secret-carrying buffers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# When enabled, mlock failure is non-fatal. ONLY for testing in CI environments
# with restricted RLIMIT_MEMLOCK. NEVER enable in production.
soft-mlock = []

[dependencies]
zeroize = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
