[package]
name = "core-memory"
description = "Page-aligned secure memory allocator backed by memfd_secret(2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeroize = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
