[package]
name = "core-types"
description = "Shared types, error types, and event schema for the PDS IPC bus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
core-memory = { workspace = true }
serde       = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
zeroize     = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
proptest    = { workspace = true }
serde_json  = { workspace = true }
postcard    = { workspace = true }
