[package]
name = "daemon-discovery"
description = "Open Sesame peer discovery — mDNS, DNS SRV, bootstrap.json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types.workspace = true
core-config.workspace = true
tokio = { workspace = true }
socket2 = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
