[package]
name = "daemon-discovery"
description = "Open Sesame peer discovery — mDNS, DNS SRV, bootstrap.json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types.workspace = true
core-config.workspace = true
tokio = { workspace = true }
socket2 = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
mainline = { workspace = true }
hickory-resolver = { workspace = true }
foca = { workspace = true }
postcard = { workspace = true }
rand = { version = "0.9", default-features = false, features = ["std", "small_rng"] }
core-crypto = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
