[package]
name = "daemon-input"
description = "Input remapper daemon: keyboard layers, app-aware rules, macro expansion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-profile = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
xkbcommon    = { workspace = true }
evdev        = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux      = { workspace = true, features = ["desktop"] }
tracing-journald    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos  = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio-test  = { workspace = true }
