[package]
name = "daemon-secrets"
description = "Secrets broker daemon: JIT delivery, keyring integration, profile-scoped access"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-crypto  = { workspace = true }
core-secrets = { workspace = true }
core-profile = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux      = { workspace = true }
tracing-journald    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos  = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio-test  = { workspace = true }
