[package]
name = "platform-linux"
description = "Linux API wrappers: evdev, uinput, Wayland protocols, D-Bus, Landlock, seccomp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
desktop = [
    "dep:wayland-client",
    "dep:wayland-protocols",
    "dep:wayland-protocols-wlr",
    "dep:smithay-client-toolkit",
    "dep:evdev",
]
cosmic = [
    "desktop",
    "dep:cosmic-client-toolkit",
    "dep:cosmic-protocols",
]

[target.'cfg(target_os = "linux")'.dependencies]
# Always available (headless-safe)
core-types              = { workspace = true }
zbus                    = { workspace = true }
landlock                = { workspace = true }
libseccomp              = { workspace = true }
sd-notify               = { workspace = true }
serde                   = { workspace = true }
thiserror               = { workspace = true }
tracing                 = { workspace = true }
tokio                   = { workspace = true }
libc                    = { workspace = true }
futures-util            = { workspace = true }
ron                     = { workspace = true }
dirs                    = { workspace = true }
uuid                    = { workspace = true }

# Desktop-only (optional, behind `desktop` feature)
evdev                   = { workspace = true, optional = true }
wayland-client          = { workspace = true, optional = true }
wayland-protocols       = { workspace = true, optional = true }
wayland-protocols-wlr   = { workspace = true, optional = true }
smithay-client-toolkit  = { workspace = true, optional = true }

# GPL-3.0 gated: feature-flagged to isolate license obligation
cosmic-client-toolkit   = { workspace = true, optional = true }
cosmic-protocols        = { workspace = true, optional = true }

[dev-dependencies]
proptest    = { workspace = true }
tempfile    = { workspace = true }
