[package]
name = "platform-macos"
description = "macOS API wrappers: Accessibility, CGEventTap, NSPasteboard, Keychain, LaunchAgent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-types          = { workspace = true }
security-framework  = { workspace = true }
objc2               = { workspace = true }
core-foundation     = { workspace = true }
core-graphics       = { workspace = true }
serde               = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
tokio               = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
tempfile    = { workspace = true }
