[package]
name = "sesame-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-config.workspace = true
core-types.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
thiserror.workspace = true
tracing.workspace = true
gix.workspace = true
git2.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true, features = ["fs", "process"] }

[dev-dependencies]

[lints]
workspace = true
